# Geomatrix

./: README.md
Client Side/: CMakeLists.txt  Ceva game client.cpp  Ceva game client.h
Server Side/: CMakeLists.txt  CMakeProject1.cpp  CMakeProject1.h
Server Side/maps/: ceva.txt  default_map.txt
